<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A81A8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenuActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main_menu">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:shadowColor="@color/black"
        android:shadowDx="@dimen/material_emphasis_high_type"
        android:shadowDy="@dimen/material_emphasis_high_type"
        android:shadowRadius="@dimen/material_emphasis_high_type"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <Button
            android:id="@+id/btnWeather"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:text="@string/goWeather" />

        <Button
            android:id="@+id/btnTicTacToe"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:text="@string/goTicTacToe" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:text="@string/goInfo" />

        <Button
            android:id="@+id/btnDraw"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/goDraw" />

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/goTakePic" />

        <Button
            android:id="@+id/btnSong"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/goMusic" />
    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>